# 2026-TVHC-Robotics-Competition

./: .gitignore  README.md  requirements.txt
src/rc_car_description/: CMakeLists.txt  package.xml
src/rc_car_description/config/: ros2_control.yaml
src/rc_car_description/launch/: display.launch.py  rc_car_gazebo.launch(old).py  rc_car_sim.py
src/rc_car_description/rviz/: rc_car.rviz
src/rc_car_description/urdf/: ignition_plugins.xacro  materials.xacro  rc_car.ros2_control.xacro  rc_car.urdf.xacro
src/rc_car_description/worlds/: cat_robotics.world
src/scripts/: keyboard_teleop_pynput.py
